--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Fun Bus Travel Agency - Solution</title>
 
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto" rel="stylesheet">
+  <link href="css/navigation.css" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
 
   <!--[if lt IE 9]>
@@ -15,9 +16,24 @@
 </head>
 
 <body>
+  <section class="navigation">
+    <h1>Fun Bus</h1>
 
+    <div class="navbar">
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </div>
+  </section>
+  <section class="header">
+    <div class="bus-img">
+
+      <img src="img/fun-bus.jpg" alt="Toy bus in sand">
+
+    </div>
+  </section>
   
-     
   <div class="container home">
    
     <section class="content-section">
